--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,3 +87,13 @@ bInitServerOnClient=true
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/OnlineSubsystemUtils.IpNetDriver]Add commentMore actions
+NetServerMaxTickRate=60
+
+
+
+
+
+
+
+
